--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 <p> Como usar o git:</p>
+  <p> Primeiro, você cria um diretório com o comando <kbd>mkdir primeiro-projeto</kbd></p>
+     <p>Depois, você entra no diretório com o comando <kbd>cd primeiro-projeto</kbd></p>
+    <p>Uma vez dentro do diretório, você cria o repositório com o comando <kbd>git init</kbd></p>
 </body>
 </html>
